Add LiveSearch to Room/Index to display the results of the song query.  Ajax post request should trigger on clicking a search item and pressing enter should use the first search item;

--- a/PartyPlaylists.MVC/Views/Room/Index.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Index.cshtml
@@ -27,7 +27,7 @@
 
 @if (string.IsNullOrEmpty(Model.CurrentRoom.SpotifyAuthCode))
 {
-    <form method="get" asp-controller="Room" asp-action="AuthorizeSpotify">
+    <form method="get" asp-controller="Room" asp-action="AuthorizeSpotify" >
         <input type="hidden" asp-for="@Model.CurrentRoom.Id">
         <button class="btn btn-primary" type="submit" id="authorizeSpotifyButton">Authorize Spotify</button>
     </form>
@@ -35,10 +35,18 @@
 else
 {
     <label>Song: </label>
-    <input list="searchResults" asp-for="@Model.SongToAdd" id="songToAdd" name="songToAdd" />
-    <datalist id="searchResults" name="searchResults" >
-        <option value="test"></option>
-    </datalist>
+    <form method="post" asp-controller="Room" asp-action="AddSongToRoom" autocomplete="off" name="songSearchForm">
+        <input hidden asp-for="@Model.SongToAdd" id="hiddenInput" />
+        <ul class="select-list-group" id="slg">
+            <li>
+                <input type="text" class="select-list-group__search" placeholder="Song" id="songToAdd" name="songToAdd" />
+                <span class="select-list-group__toggle"> </span>
+                <ul class="select-list-group" data-toggle="false" id="songsList">
+                </ul>
+            </li>
+        </ul>
+    </form>
+
     <br />
     <br />
     <button class="btn btn-primary" type="submit" id="addSongButton">Add Song</button>
@@ -73,7 +81,7 @@ else
                     }
                 });
             }
-            
+
             $("[name='addVoteButton']").click(function () { postSongVote($(this).val()); })
         });
     </script>
@@ -101,17 +109,7 @@ else
             });
         }
 
-        $(document).ready(function () {
-            $("#addSongButton").click(function () {
-                postSongData();
-            });
-
-            $("#songToAdd").keydown(function (e) {
-                if (e.keyCode == 13) {
-                    postSongData();
-                }
-            });
-        });
+        
     </script>
 
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
@@ -180,8 +178,8 @@ else
     </script>
 
     <script>
-        
-            var search = function () {
+        var search = document.getElementById('songToAdd');
+        var searchFunc = function () {
             var auth = $('#spotifyAuthCode').val();
             $.ajax({
                 url: "/room/livesearch",
@@ -192,30 +190,80 @@ else
                     "query": $('#songToAdd').val()
                 },
                 success: function (response) {
+
+                    console.log(response);
                     if (response == null) {
                         return;
                     }
-                    console.log(response);
-                    deleteChildren('searchResults')
-                    response.forEach(s => {
-                        var select = document.getElementById('searchResults');
-                        var option = document.createElement('option');
-                        option.value = s.name + " artist: " + s.artist;
-                        select.appendChild(option);
-                    });
+                    var formInput = document.getElementById('hiddenInput');
+                    var searchedSongList = document.getElementById("songsList");
+
+                    searchedSongList.innerHTML = response;
+                    var liElements = searchedSongList.childNodes;
+                    Array.prototype.forEach.call(liElements, s => s.addEventListener('click', function () {
+                        formInput.value = s.id;
+                        $.ajax({
+                            url: "/room/AddSongToRoom",
+                            type: "POST",
+                            data: {
+                                "CurrentRoom.Id": $("#roomId")[0].value,
+                                "CurrentRoom.SpotifyAuthCode": $("#spotifyAuthCode")[0].value,
+                                "SongToAdd": formInput.value,
+                            },
+                            headers: {
+                                'Authorization': "Bearer " + $("#jwtToken")[0].value,
+                            },
+                            success: function (data) {
+                                $("#tableOfSongs").html(data);
+                            },
+                            error: function (data) {
+                                console.log(data);
+                            }
+                            });
+                    }));
+
+                    
                 },
                 error: function (response) {
                     console.log(response);
                 }
-                    
             })
         }
-        
 
+        function submitInput (event) {
+
+        }
 
         $(document).ready(function () {
-            $('#songToAdd').on('input', debounce(search, 500));
+            $('#songToAdd').on('input', debounce(searchFunc, 250));
+            $('#songToAdd').keydown(function (e) {
+                var firstLi = document.getElementById("songsList").firstElementChild;
+                var formInput = document.getElementById('hiddenInput');
+                if (e.keyCode == 13 && firstLi != null) {
+                    formInput.value = firstLi.id;
+                    $.ajax({
+                        url: "/room/AddSongToRoom",
+                        type: "POST",
+                        data: {
+                            "CurrentRoom.Id": $("#roomId")[0].value,
+                            "CurrentRoom.SpotifyAuthCode": $("#spotifyAuthCode")[0].value,
+                            "SongToAdd": formInput.value,
+                        },
+                        headers: {
+                            'Authorization': "Bearer " + $("#jwtToken")[0].value,
+                        },
+                        success: function (data) {
+                            $("#tableOfSongs").html(data);
+                        },
+                        error: function (data) {
+                            console.log(data);
+                        }
+                    });
+                }
+            })
         })
+
+        
 
         function debounce(func, wait, immediate) {
             var timeout;
@@ -225,11 +273,9 @@ else
                     timeout = null;
                     if (!immediate) func.apply(context, args);
                 };
-                console.log(later);
                 var callNow = immediate && !timeout;
                 clearTimeout(timeout);
                 timeout = setTimeout(later, wait);
-                console.log(timeout);
                 if (callNow) func.apply(context, args);
             };
         };
@@ -237,14 +283,15 @@ else
         function deleteChildren(e) {
 
             var parent = document.getElementById(e);
-            var firstChild = parent.firstElementChild;
-            while (firstChild != null) {
-                firstChild.remove();
-                firstChild = parent.firstElementChild;
+            var children = parent.childNodes;
+            console.log()
+            for (let i = 0; i < children.length; i++) {
+                console.log(children[i]);
             }
 
         }
-        
+
     </script>
     <script src="~/js/roomhub.js"></script>
+    <script src="~/js/selectList.js"></script>
 }
