--- a/PartyPlaylists.MVC/Views/Shared/_Layout.cshtml
+++ b/PartyPlaylists.MVC/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - PartyPlaylists.MVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/selectList.css" />
 </head>
 <body>
     <header>
