Initiate work on android development

--- a/PartyPlaylists/PartyPlaylists/Views/MenuPage.xaml
+++ b/PartyPlaylists/PartyPlaylists/Views/MenuPage.xaml
@@ -6,14 +6,12 @@
              mc:Ignorable="d"
              x:Class="PartyPlaylists.Views.MenuPage"
              Title="Menu">
-             
-    <StackLayout VerticalOptions="FillAndExpand">
+
+    <StackLayout VerticalOptions="FillAndExpand" BackgroundColor="#071013">
         <ListView x:Name="ListViewMenu"
                     HasUnevenRows="True">
             <d:ListView.ItemsSource>
                 <x:Array Type="{x:Type x:String}">
-                    <x:String>Item 1</x:String>
-                    <x:String>Item 2</x:String>
                 </x:Array>
             </d:ListView.ItemsSource>
             <ListView.ItemTemplate>
