--- a/PartyPlaylists/PartyPlaylists/Views/MainPage.xaml
+++ b/PartyPlaylists/PartyPlaylists/Views/MainPage.xaml
@@ -14,7 +14,7 @@
     <MasterDetailPage.Detail>
         <NavigationPage>
             <x:Arguments>
-                <views:ItemsPage />
+                <views:JoinRoomPage />
             </x:Arguments>
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
