Remove uneeded padding from selectLIst css

--- a/PartyPlaylists.MVC/Views/Room/Index.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Index.cshtml
@@ -49,7 +49,7 @@ else
                                     <div id="searchContainer" class="search-container">
                                         <input type="hidden" id="hiddenInput" asp-for="@Model.SongToAdd" />
                                         <input type="text" class="select-list-group__search form form-control" placeholder="Song" id="songToAdd" name="songToAdd" />
-                                        <ul class="select-list-group" data-toggle="false" id="songListGroup">
+                                        <ul class="select-list-group search-list" data-toggle="false" id="songListGroup">
                                         </ul>
                                     </div>
                                 </div>
