Access roomdata via API

--- a/PartyPlaylists/PartyPlaylists/Views/JoinRoomPage.xaml
+++ b/PartyPlaylists/PartyPlaylists/Views/JoinRoomPage.xaml
@@ -21,7 +21,7 @@
 
             <StackLayout Padding="10">
                 <Frame BorderColor="White" CornerRadius="5" BackgroundColor="#1d2528">
-                    <Entry Placeholder="Room ID" Keyboard="Numeric" TextColor="White" PlaceholderColor="White"></Entry>
+                    <Entry Placeholder="Room ID" Keyboard="Numeric" TextColor="White" PlaceholderColor="White" Text="{Binding RoomToJoin}"></Entry>
                 </Frame>
                 <Button Text="Join Room" Command="{Binding JoinRoomCommand}"></Button>
             </StackLayout>
