Add 'AddVoteToSong' to API Seperate token creation and token saving logic

--- a/PartyPlaylists/PartyPlaylists/Views/AboutPage.xaml
+++ b/PartyPlaylists/PartyPlaylists/Views/AboutPage.xaml
@@ -38,7 +38,7 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="AppName" FontAttributes="Bold" FontSize="22" />
+                                <Span Text="PartyPlaylists" FontAttributes="Bold" FontSize="22" />
                                 <Span Text=" " />
                                 <Span Text="1.0" ForegroundColor="{StaticResource LightTextColor}" />
                             </FormattedString.Spans>
