--- a/PartyPlaylists/PartyPlaylists/Views/RoomPage.xaml
+++ b/PartyPlaylists/PartyPlaylists/Views/RoomPage.xaml
@@ -7,7 +7,8 @@
              x:Class="PartyPlaylists.Views.RoomPage"
              xmlns:vm="clr-namespace:PartyPlaylists.ViewModels"
              xmlns:RoomSong="clr-namespace:PartyPlaylists.Models.DataModels"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             x:Name="RoomContentPage">
 
     <ContentPage.Content>
         <Grid>
@@ -52,7 +53,7 @@
                                                 <Label FontSize="30" Text="{Binding Song.Name}"></Label>
                                                 <Label FontSize="20" Text="{Binding Song.Artist}" TextColor="#6c7585"></Label>
                                                 <Label FontSize="20" Text="{Binding SongAddedBy, StringFormat='Added by: {0}'}" TextColor="#6c7585"></Label>
-                                                <Button Text="{Binding SongRating, StringFormat='+{0}'}" FontSize="20" WidthRequest="50" HeightRequest="40" HorizontalOptions="Start"></Button>
+                                                <Button Text="{Binding SongRating, StringFormat='+{0}'}" FontSize="20" WidthRequest="50" HeightRequest="40" HorizontalOptions="Start" Command="{Binding BindingContext.AddVoteCommand, Source={x:Reference Name=RoomContentPage}}" CommandParameter="{Binding SongId}"></Button>
                                             </StackLayout>
                                         </Grid>
                                     </Frame>
